test-suite-log.txt
[2025-09-03T13:49:55.038Z] ЁЯЪА Starting Comprehensive Test Suite
[2025-09-03T13:49:55.040Z] ЁЯФН Testing syntax validation...
[2025-09-03T13:49:55.040Z] ЁЯЪА Package.json syntax
[2025-09-03T13:49:55.063Z] тЭМ Package.json syntax failed: Command failed: node -c package.json
/workspace/package.json:2
  "name": "ziontechgroup.com",
        ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.16.0

[2025-09-03T13:49:55.064Z] ЁЯЪА Next.js config syntax
[2025-09-03T13:49:55.084Z] тЬЕ Next.js config syntax passed
[2025-09-03T13:49:55.084Z] ЁЯЪА ESLint config syntax
[2025-09-03T13:49:55.104Z] тЬЕ ESLint config syntax passed
[2025-09-03T13:49:55.105Z] ЁЯУж Testing dependencies...
[2025-09-03T13:49:55.105Z] ЁЯЪА Dependency listing
[2025-09-03T13:49:55.483Z] тЬЕ Dependency listing passed
[2025-09-03T13:49:55.483Z] ЁЯЪА Outdated dependencies check
[2025-09-03T13:49:57.088Z] тЭМ Outdated dependencies check failed: Command failed: npm outdated
npm warn config optional Use `--omit=optional` to exclude optional dependencies, or
npm warn config `--include=optional` to include them.
npm warn config
npm warn config       Default value does install optional deps unless otherwise omitted.

[2025-09-03T13:49:57.088Z] ЁЯПЧя╕П Testing build process...
[2025-09-03T13:49:57.088Z] ЁЯЪА Production build
[2025-09-03T13:50:55.761Z] тЭМ Production build failed: Command failed: npm run build
npm warn config optional Use `--omit=optional` to exclude optional dependencies, or
npm warn config `--include=optional` to include them.
npm warn config
npm warn config       Default value does install optional deps unless otherwise omitted.
warn  - Invalid next.config.js options detected: 
  - The value at .experimental has an unexpected property, optimizePackageImports, which is not in the list of allowed properties (adjustFontFallbacks, allowMiddlewareResponseBody, amp, appDir, browsersListForSwc, cpus, craCompat, disableOptimizedLoading, disablePostcssPresetEnv, esmExternals, externalDir, fallbackNodePolyfills, forceSwcTransforms, fullySpecified, gzipSize, incrementalCacheHandlerPath, isrFlushToDisk, isrMemoryCacheSize, largePageDataBytes, legacyBrowsers, manualClientBasePath, modularizeImports, newNextLinkBehavior, nextScriptWorkers, optimizeCss, optimisticClientCache, outputFileTracingRoot, pageEnv, profiling, proxyTimeout, runtime, scrollRestoration, serverComponents, sharedPool, skipMiddlewareUrlNormalize, skipTrailingSlashRedirect, sri, swcFileReading, swcMinify, swcMinifyDebugOptions, swcPlugins, swcTraceProfiling, urlImports, workerThreads).

See more info here: https://nextjs.org/docs/messages/invalid-next-config
warn  - You have enabled experimental feature (optimizePackageImports) in next.config.js.
warn  - Experimental features are not covered by semver, and may cause unexpected or broken application behavior. Use at your own risk.

error - ESLint: Cannot read config file: /workspace/.eslintrc.js Error: module is not defined
Failed to compile.

./components/AccessibilityManager.tsx:11:7
Type error: Type '() => void' is not assignable to type 'FC<{}>'.
  Type 'void' is not assignable to type 'ReactNode | Promise<ReactNode>'.

[0m [90m  9 | [39m}[0m
[0m [90m 10 | [39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 11 | [39m[36mconst[39m [33mAccessibilityManager[39m[33m:[39m [33mReact[39m[33m.[39m[33mFC[39m [33m=[39m () [33m=>[39m {[0m
[0m [90m    | [39m      [31m[1m^[22m[39m[0m
[0m [90m 12 | [39m  [36mconst[39m [settings[33m,[39m setSettings] [33m=[39m useState[33m<[39m[33mAccessibilitySettings[39m[33m>[39m({[33m;[39m[0m
[0m [90m 13 | [39m    highContrast[33m:[39m [36mfalse[39m[33m,[39m[33m;[39m[0m
[0m [90m 14 | [39m    fontSize[33m:[39m [32m"normal"[39m[33m,[39m[33m;[39m[0m

[2025-09-03T13:50:55.762Z] ЁЯЪА TypeScript type checking
[2025-09-03T13:51:00.141Z] тЭМ TypeScript type checking failed: spawnSync /bin/sh ENOBUFS
[2025-09-03T13:51:00.141Z] ЁЯФН Testing linting...
[2025-09-03T13:51:00.142Z] ЁЯЪА ESLint linting
[2025-09-03T13:51:00.407Z] тЭМ ESLint linting failed: Command failed: npm run lint
npm warn config optional Use `--omit=optional` to exclude optional dependencies, or
npm warn config `--include=optional` to include them.
npm warn config
npm warn config       Default value does install optional deps unless otherwise omitted.

Oops! Something went wrong! :(

ESLint: 8.57.1

SyntaxError: Unexpected token ';'
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:116:19)

[2025-09-03T13:51:00.407Z] ЁЯдЦ Testing automation scripts...
[2025-09-03T13:51:00.407Z] ЁЯЪА Simple automation orchestrator
[2025-09-03T13:52:00.411Z] тЭМ Simple automation orchestrator failed: spawnSync /bin/sh ETIMEDOUT
[2025-09-03T13:52:00.412Z] ЁЯЪА SEO optimizer
[2025-09-03T13:52:00.449Z] тЬЕ SEO optimizer passed
[2025-09-03T13:52:00.449Z] ЁЯЪА Security enhancer
[2025-09-03T13:52:01.853Z] тЬЕ Security enhancer passed
[2025-09-03T13:52:01.853Z] ЁЯУБ Testing file integrity...
[2025-09-03T13:52:01.853Z] тЬЕ File exists: package.json
[2025-09-03T13:52:01.853Z] тЬЕ File exists: next.config.js
[2025-09-03T13:52:01.853Z] тЬЕ File exists: .eslintrc.js
[2025-09-03T13:52:01.853Z] тЬЕ File exists: components/AccessibilityEnhancer.tsx
[2025-09-03T13:52:01.854Z] тЬЕ File exists: public/sitemap.xml
[2025-09-03T13:52:01.854Z] тЬЕ File exists: public/robots.txt
[2025-09-03T13:52:01.854Z] Test report saved to /workspace/comprehensive-test-report.json
[2025-09-03T13:52:01.854Z] ЁЯОЙ Test suite completed!
[2025-09-03T13:52:01.854Z] ЁЯУК Results: 11/17 tests passed (64.71%)
[2025-09-03T13:52:01.854Z] тЭМ 6 tests failed
